[package]
name = "syncserver"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
bincode = "1.3.3"
celestia-rpc = {git="https://github.com/eigerco/lumina.git", rev="8094d04b76e3f3c08667d654c8b6b5bb3fdeab33"}
celestia-types = {git="https://github.com/eigerco/lumina.git", rev="8094d04b76e3f3c08667d654c8b6b5bb3fdeab33"}
celestia-tendermint-proto = "0.32.1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
# because of this -_- https://github.com/rust-rocksdb/rust-rocksdb/issues/881
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb", rev = "1cf906dc4087f06631820f13855e6b27bd21b972" }
nmt-rs = {version="0.2.0", features=["serde"]}

[dev-dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc", "std"] }